styles.css
/* ... */
.c-card__image {
  width: 100%;
  height: auto; /* Maintain aspect ratio */
  object-fit: cover;
}

/* services */
.c-services{
  width: 100%;
  height: auto;
}
.services-card {
  width: 600px;
  height: 450px;
  perspective: 1000px;
  margin: 15px;
}
.card-inner {
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}
.services-card:hover .card-inner {
  transform: rotateY(180deg);
}
.card-front,
.card-back {
  width: 100%;
  height: 100%;
  position: absolute;
  backface-visibility: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.card-back {
  transform: rotateY(180deg);
}

.services__button {
  padding: 10px 20px;
  text-decoration: none;
  display: inline-block;
}

/* Plant care guide */
.c-plant--guide p{
  width: 60ch; /* Limiting width to 60 characters */
}
.c-guide__image {
  display: none;
}

/* FAQ section */
.c-accordion {
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  outline: none;
  transition: 0.4s;
}

.c-accordion:after {
  content: "\002B";
  color: var(--clr-white);
  font-weight: bold;
  float: right;
  margin-left: 5px;
}

.c-accordion.active:after {
  content: "\2212";
}

.c-panel {
  padding: 0 20px;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.5s ease-in-out;
}

/* About us */
.c-about--guide p{
  width: 60ch; /* Limiting width to 60 characters */
}
.c-about__image {
  display: none;
}

/* Testimonials */
.testimonials-container {
  max-width: 100%;
  margin: 0 auto;
  padding: 20px;
}

.heading {
  text-align: center;
  font-size: 24px;
  margin-bottom: 10px;
}

.subheading {
  text-align: center;
  font-size: 16px;
  color: #666;
  margin-bottom: 30px;
}

.testimonial-card {
  border: 1px solid #ccc;
  border-radius: 8px;
  margin-bottom: 20px;
  padding: 20px;
}

.testimonial {
  display: flex;
  flex-direction: column;
}

.text {
  margin-top: 15px;
}

.name {
  font-weight: bold;
  margin-bottom: 5px;
}

.quote {
  font-style: italic;
}

.testimonial img {
  width: 80px;
  height: 80px;
  border-radius: 50%;
  object-fit: cover;
}

/* Contact Form */
.form-group input, 
.form-group textarea {
  width: 100%;
  padding: 8px;
  border: 1px solid #ccc;
  border-radius: 5px;
  box-sizing: border-box;
  margin-top: 5px;
}

.c-icons {
  font-size: 1.5rem;
  text-decoration: none;
  margin-right: 10px;
}

.c-social-icons-containers p{
  font-weight: bold;
}
/* Media query for screens larger than 700px */
@media screen and (min-width: 768px) {
  /* Top navbar */
  .topnavbar {
    display: flex; /* Align links to the right */
  }

  .topnavbar__link {
    justify-content: flex-start;
  }

  .topnav__links {
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin-left: 10px;
    margin-right: 20px; /* Add margin between links */
  }
  .topnavbar__link:hover {
    color: var(--text-hover-100);
    text-decoration: underline;
  }

  /* Hamburger icon */
  .hamburger {
    display: none;
  }

  .cancel {
    display: none;
  }

  .hamburger-menu {
    display: none;
  }
  /* aanouncement */
  .l-announcement {
    display: flex;
    margin-top: 3.5rem;
  }

  /* Seasonal Favourites */
  /* Adjust card width for desktop view */
  .c-carousel {
    transition: none;
    margin-left: 10px;
    margin-right: 10px;
  }

  .c-sf__card {
    flex: 0 0 calc(33.33% - 40px);
    max-width: calc(33.33% - 40px);
  }
  .c-pagination {
    display: flex;
    justify-content: center;
    margin-top: 20px;
  }

  .prev-btn {
    text-align: center;
    left: -10px; /* Adjust the left positioning */
  }

  .next-btn {
    text-align: center;
    right: -10px; /* Adjust the right positioning */
  }

  /* Our Categories section */
  .c-card {
    width: calc(33.33% - 20px); /* Display three cards per row with margins */
    height: 300px; /* Adjust height based on content */
    margin: 10px;
    margin-bottom: 0;
  }
  .c-card__overlay {
    display: none; /* Hide overlay on desktop */
  }

  .c-card:hover .c-card__overlay {
    display: flex; /* Show overlay on hover */
  }

  /* Our Services */
  .c-services {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    margin: 0 auto; /* Centering the content */
  }

  .service-card__container {
    flex: 1 1 33.33%; /* Each container occupies 1/3 of the available space */
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
  }

  .services-card {
    width: 420px;
    height: 450px;
    perspective: 1000px;
    margin-top: 20px;
  }

  /* Plant care guide*/

  .c-plant__guide {
    flex-direction: row;
  }

  .c-guide__image {
    display: block;
  }

  /* FAQ section */
  .c-accordion-container {
    display: flex;
    flex-direction: row;
    gap: 10px;
  }

  /* About us */

  .c-about__guide {
    flex-direction: row;
  }

  .c-about__image {
    display: block;
  }

  /* Testimonials */
  .testimonials-container {
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
  }

  .c-cards__container {
    flex-direction: row;
    align-items: center;
    justify-content: center;
  }

  .testimonial-card {
    width: calc(33.33% - 40px);
    margin-right: 20px;
  }

  .testimonial-card:nth-child(3n) {
    margin-right: 0;
  }
  /* Contact form */
  .c-contactus-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
  }

  .contact-form {
    width: 45%;
    margin-bottom: 0;
  }

  .info {
    width: 45%;
  }
  /* Footer Map */
  .c-footer {
    flex-direction: row;
  }

  .map {
    width: 300px;
    height: 200px;
  }

  .map iframe {
    width: 100%;
    height: 100%;
  }
}

